--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,7 +25,7 @@ h1{
 .container{
   padding: 40px;
   font-size: 25px;
-  margin: 20px;
+  margin-bottom: 20px;
   border: 1px solid black;
   box-shadow: 1px 5px 4px 3px black;
   max-width: 1000px;
@@ -33,6 +33,14 @@ h1{
   margin-left: auto;
   background-color: Gainsboro;
   font-weight: bold;
+}
+.b{
+  background-color: blue;
+  border: none;
+  box-shadow: none;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 0;
 }
 .date{
   margin-left: 10px;
@@ -53,10 +61,7 @@ a {
 grid-template-columns: 1fr 1fr;
 align-items: center;
 }
-/* .form-section>div{
-  display: flex;
-  align-items: center;
-} */
+
 input{
   margin: 10px;
   height: 40px;
@@ -65,4 +70,16 @@ button{
   margin-left: 30px;
   margin-bottom: 30px;
   font-size: 25px;
+}
+.add-new{
+  border: 2px solid black;
+  box-shadow: 1px 1px black;
+  padding: 5px;
+  max-width: 1000px;
+  margin-right: auto;
+  margin-left: auto;
+  border-radius: 2px;
+}
+.add-new:hover{
+  outline: 5px solid black;
 }
